# dns-scheduler

./: .dockerignore  .env_common.env  .gitignore  .gitlab-ci.yml  AGENTS.md  Cargo.toml  Dockerfile  GEMINI.md  GITLAB_BACKEND.md  README.md  bootstrap-gcp.sh  cloudbuild-app.yaml  cloudbuild-infra.yaml  cloudbuild.yaml  cloudrun-service.yaml  credential-config.json  docker-compose.yaml  flake.nix  function.go  go.mod  go.sum  init-gitlab-backend.sh  justfile  main.go  mise.local.toml  mise.prod.toml  nextdns.go  otel-config.yaml  setup-workload-identity.sh  skaffold.yaml
src/: config.rs  domain.rs  handlers.rs  lib.rs  main.rs  providers.rs
src/handlers/: disable.rs  enable.rs  set.rs  toggle.rs
src/providers/: next_dns.rs
src/providers/next_dns/: client.rs  config.rs  parental_control_settings.rs
terraform/: application-resources.tf  backend.tf  infra-resources.tf  main.tf  outputs.tf  required-services.tf  secrets.tf  service-accounts.tf  terraform.tfvars.example  variables.tf
