[package]
name = "dns-scheduler"
version = "0.1.0"
edition = "2024"

[dependencies]
opentelemetry = { version = "0.31", features = ["logs"] }
opentelemetry-appender-tracing = "0.31"
opentelemetry-otlp = { version = "0.31", features = ["grpc-tonic", "tls-roots", "trace", "logs", "metrics"] }
opentelemetry-stdout = { version = "0.31", features = ["trace"] }
opentelemetry_sdk = { version = "0.31", features = ["logs", "rt-tokio"] }
reqwest = { version = "0.13.2", features = ["blocking", "json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0.18"
tiny_http = "0.12.0"
tokio = { version = "1.49.0", features = ["full"] }
tracing = "0.1.44"
tracing-opentelemetry = "0.32.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
